tests/ui/fail/impl_too_aligned.stderr
error[E0080]: evaluation panicked: TooAligned requires stricter alignment than #[extern_trait] can provide
  --> tests/ui/fail/impl_too_aligned.rs:13:14
   |
13 | impl Api for TooAligned {
   |              ^^^^^^^^^^ evaluation of `_` failed here
